Fixed bug in DR function

--- a/fluxtopo/fm_preprelim_proc.ipynb
+++ b/fluxtopo/fm_preprelim_proc.ipynb
@@ -189,7 +189,7 @@
     "fm_10hz_5min_avg['pitch_angle'] = coord_rotate.pitch_angle(fm_10hz_5min_avg['Ux'], fm_10hz_5min_avg['Uy'], fm_10hz_5min_avg['Uz'])\r\n",
     "\r\n",
     "# Calculate DR\r\n",
-    "fm_10hz_dr = coord_rotate.double_rotate_pd(fm_10hz_df.loc[:,['Ux','Uy','Uz']], pd.infer_freq(fm_10hz_df))\r\n",
+    "fm_10hz_dr = coord_rotate.double_rotate_pd(fm_10hz_df.loc[:,['Ux','Uy','Uz']], '5T')\r\n",
     "fm_10hz_all = pd.concat([fm_10hz_df, fm_10hz_dr], axis=1)\r\n",
     "\r\n",
     "# Covariances\r\n",
@@ -245,12 +245,12 @@
     "\t'Uy_Avg' : 'Uy',\r\n",
     "\t'Uz_Avg' : 'Uz',\r\n",
     "\t'C_Avg' : 'C',\r\n",
-    "\t'T_sonic_Avg' : 't_sonic_f0',\r\n",
+    "\t'T_sonic_Avg' : 't_sonic_f0_C',\r\n",
     "\t'AirTC_Avg' : 't_air',\r\n",
     "\t'RH_Avg' : 'rh',\r\n",
     "\t'e_s_Avg' : 'es',\r\n",
     "\t'e_a_Avg' : 'ea',\r\n",
-    "\t't_sonic' : 't_sonic_f1',\r\n",
+    "\t't_sonic' : 't_sonic_f1_K',\r\n",
     "\t'wd_mean' : 'wd',\r\n",
     "\t'ws_mean' : 'ws',\r\n",
     "}\r\n",
@@ -278,6 +278,18 @@
     "# QA/QC (if needed)\r\n",
     "\r\n",
     "# Code up vickers and mahrt 1999\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Notes for next one\r\n",
+    "# Email about t sonic conversions/corrections\r\n",
+    "# Add QA/QC\r\n",
+    "# Min. obs filter"
    ],
    "outputs": [],
    "metadata": {}
